<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Language Settings -->
    <PreferenceCategory android:title="@string/pref_category_language">
        <ListPreference
            android:key="language"
            android:title="@string/pref_language"
            android:summary="@string/pref_language_summary"
            android:dialogTitle="@string/pref_language_dialog"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:defaultValue="system"/>
    </PreferenceCategory>

    <!-- Other Settings -->
    <PreferenceCategory android:title="@string/pref_category_other">
        <Preference
            android:key="app_version"
            android:title="@string/pref_app_version"
            android:summary="1.5.7"
            android:selectable="false"/>

        <Preference
            android:key="about"
            android:title="@string/pref_about"
            android:summary="@string/pref_about_summary"/>
    </PreferenceCategory>

</PreferenceScreen>
